# kconfig-dump

./: CMakeLists.txt
debian/: changelog  control  copyright
src/: CMakeLists.txt  main.cpp
